# auto-spam

./: LICENSE  README.md  setup.cfg  spam_bot.py
.github/workflows/: pylint.yml
src/spam/: spam_bot.py
