[metadata]
name = auto-spam
version = 3.0
author = santipvz
author_email = santivzqzz@gmail.com
description = spam your friends with a lot of messages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/santipvz/auto-spam
project_urls =
    Bug Tracker = https://github.com/santipvz/auto-spam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pynput

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    spam = spam.spam_bot:main
